main.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  width: 100%;
  height: auto;
  display: block;
  object-fit: cover;
}

:root {
  --BG: #f3f3f1;
  --ALT-BG: #fff;
  --FOOTER-BG: #444444;
  --ALT-FOOTER-BG: #2a2a28;
  --TEXT-H: #2a2a28;
  --TEXT-P: #444444;
  --FF: "Manrope", sans-serif;
  --FW: 200;
  --BORDER: 1px solid red;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--BG);
  display: flex;
  flex-direction: column;
  font-family: var(--FF);
  font-weight: var(--FW);
  font-style: normal;
}

/* HEADER STYLING */
header {
  position: fixed;
  top: 0;
  left: 0;
  height: 90px;
  width: 100%;
  display: flex;
  align-items: center;
  padding-block: 30px;
  padding-inline: 50px;
  background-color: blanchedalmond;
  border-bottom: 1px solid hsla(0, 0%, 80%, 0.5);
  transition: top 0.4s ease;
  z-index: 1000;
}
header.hidden{
  top: -90px;
}

.header-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-left {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.header-left a {
  text-decoration: none;
  color: hsla(0, 0%, 0%, 0.6);
  font-size: 16px;
  line-height: 19.2px;
  letter-spacing: -0.2px;
}

.header-left a:hover {
  color: hsla(0, 0%, 0%, 0.8);
}

.header-right {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 25px;
}
.nav {
  text-decoration: none;
  color: hsla(0, 0%, 0%, 0.9);
  margin-left: 25px;
  font-size: 14px;
  line-height: 28px;
  letter-spacing: -0.1px;
}
.nav:hover {
  color: #828282;
}
.icon {
  border: 1px solid hsla(0, 0%, 80%, 0.8);
  border-radius: 8px;
  padding: 7px;
}

.theme-icon {
  width: 1.5rem;
  height: 1.5rem;
}
.icon:hover {
  cursor: pointer;
}
/* END HEADER STYLING */


/*MAIN STYLING*/
/* HERO SECTION STYLING */
.hero-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-inline: 7%;
  background-color: #fff;
  border-radius: 0px 0px 60px 60px;
  padding-top: 135px;
  margin-bottom: 100px;
}
.hero-image-container {
  display: flex;
  margin-bottom: 40px;
}
.hero-image {
  width: 125px;
  height: 125px;
  border-radius: 50%;
}
.hero-section h1 {
  font-size: 55px;
  line-height: 66px;
  letter-spacing: -0.5px;
  color: #201d15;
  margin-bottom: 45px;
}
.hero-section p {
  font-size: 18px;
  line-height: 28.8px;
  color: var(--TEXT-P);
  margin-bottom: 38px;
}
.hero-socials {
  display: flex;
  flex-direction: row;
  gap: 30px;
  margin-bottom: 60px;
}
.social-icon {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  border: 1px solid hsla(0, 0%, 80%, 0.532);
  padding: 12px;
  border-radius: 50%;
  transition: all 0.3s ease-in-out;
  color: black;
}
.social-icon:hover {
  cursor: pointer;
  background-color: black;
  color: white;
}
.hero-icon {
  width: 18px;
  height: 18px;
}
.graph-container {
  background-color: rgba(0, 0, 86, 0.743);
  font-family: sans-serif;
  color: white;
  text-align: center;
  padding: 2rem;
}

#contribution-graph {
  display: grid;
  grid-template-columns: repeat(53, 1fr); /* 53 weeks */
  gap: 2px;
  justify-content: center;
  margin-top: 20px;
  overflow-x: auto;
}

.day {
  width: 10px;
  height: 10px;
  background-color: #eee;
  border-radius: 2px;
  transition: transform 0.2s ease;
}

.day:hover {
  transform: scale(1.5);
  cursor: pointer;
}

.marquee-container {
  width: 100%;
  overflow: hidden;
  white-space: nowrap;
  display: flex;
  height: 240px;
  margin-bottom: 150px;
  position: relative;
  transition: animation-duration 0.3s ease;
}
.marquee-text{
  display: flex;
  animation: scroll-left 30s linear infinite;
  width: max-content;
}

.marquee-group{
  display: flex;
}

.marquee-block {
  display: inline-block;
  width: 360px;
  height: 240px;
  border-radius: 10px;
  margin-right: 10px;
}

.marquee-block img {
  height: 240px;
  width: 360px;
  border-radius: 10px;
  object-fit: cover;
}

/* Animation */
@keyframes scroll-left {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

.marquee-container:hover {
  animation-duration: 60s; 
}

.marquee-container:hover .marquee-text {
  animation-play-state: paused; 
}

.marquee-container:not(:hover) .marquee-text {
  animation-play-state: running;
}
/* END HERO SECTION STYLING */


/* SELECTED PROJECT STYLING */
.selected-project {
display: flex;
flex-direction: column;
justify-content: center;
padding-inline: 7%;
margin-bottom: 190px;
}

.selected-project h1{
  font-size: 50px;
  line-height: 60px;
  letter-spacing: -1px;
  color: var(--TEXT-H);
  margin-bottom: 20px;
}

.paragraph{
  font-size: 18px;
  line-height: 28.8px;
  color: var(--TEXT-P);
  margin-bottom: 50px;
}

.sp-image-container{
  display: flex;
  flex-direction: row;
  gap: 40px;
  width: fit-content;
}
.sp{
  display: flex;
  flex-direction: column;
  border: var(--BORDER);
}
.sp img{
  width: 600px;
  height: 400px;
  border-radius: 10px;
  margin-bottom: 22px;
}
.sp-text h2{
  font-size: 30px;
  line-height: 39px;
  color: var(--TEXT-H);
  margin-bottom: 25px;
}
.sp-text p{
  font-size: 18px;
  line-height: 28.8px;
  color: var(--TEXT-P);
}
/* END SELECTED PROJECT STYLING */


/*FIRST PROJECT STYLING*/
.first-project {
  width: 100%;
  display: flex;
  flex-direction: row;
  height: 500px;
  margin-bottom: 110px;
}
.fp-left{
  width: 50%;
  height: 500px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--ALT-FOOTER-BG);
  padding-inline: 7%;
}
.fp-left h1{
  font-size: 50px;
  line-height: 60px;
  letter-spacing: -1px;
  color: #fff;
  margin-bottom: 20px;
}
.fp-left p{
  font-size: 18px;
  line-height: 27px;
  color: #f3f3f2;
}
.fp-right{
  width: 50%;
  height: 500px;
  display: flex;
  flex-direction: column;
  justify-content: center;  
  align-items: center;
}
.fp-image{
  width: 100%;
  height: 500px;
}
/* END MAIN STYLING */


/* FOOTER STYLING */
.footer-top {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--FOOTER-BG);
  padding-left: 100px;
  padding-block: 100px;
}
.footer-top h1 {
  font-size: 50px;
  line-height: 60px;
  letter-spacing: -1px;
  color: white;
  margin-bottom: 7px;
}
.footer-top p {
  font-size: 18px;
  line-height: 27px;
  color: #f3f3f2;
  margin-bottom: 25px;
}

.footer-btn a {
  text-decoration: none;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  width: fit-content;
  border: none;
  padding-block: 10px;
  padding-inline: 50px;
  border-radius: 8px;
  background-color: var(--ALT-FOOTER-BG);
  font-size: 16px;
  line-height: 16.8px;
  transition: all 0.3s ease-in-out;
}
.footer-btn a:hover {
  background-color: white;
  color: black;
}

.footer-bottom {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--ALT-FOOTER-BG);
  padding-inline: 50px;
  padding-top: 65px;
  padding-bottom: 80px;
}

.fb-top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 40px;
  border-bottom: 1px solid hsla(0, 0%, 80%, 0.2);
}
.fb-left {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 80px;
}
.fb-left-logo a {
  text-decoration: none;
  font-size: 16px;
  line-height: 19.2px;
  color: white;
}

.fb-left-logo a:hover {
  color: #ffffffd9;
}

.fb-left-links {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 30px;
}

.fb-left-links a {
  text-decoration: none;
  font-size: 14px;
  line-height: 28px;
  letter-spacing: -0.1px;
  color: #afafaf;
}

.fb-left-links a:hover {
  color: white;
}

.fb-right {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 30px;
}
.social-icons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  border: 1px solid #cccccc33;
  padding: 12px;
  border-radius: 50%;
  transition: all 0.3s ease-in-out;
  color: white;
}
.social-icons:hover {
  cursor: pointer;
  background-color: white;
  color: black;
}
.fb-icon {
  width: 18px;
  height: 18px;
}
.fb-bottom {
  font-size: 14px;
  line-height: 16.8px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #afafaf;
  margin-top: 42px;
}
/* END FOOTER STYLING */

